- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    4.7.2
 
- 
        82ff3f484c7ec49e60b7fddf23794937974a6768, 80f74d3801ddece4d34b4a663bf1bdc23ecc4a67
 
Run the code below. Note that "onLoaded called. status = 1" is printed twice (i.e. one time too many).
import QtQuick 1.0 Item { width: 640 height: 480 Loader { sourceComponent: redRectComponent onLoaded: print("onLoaded called. status = " + status) } Component { id: redRectComponent Rectangle { width: 100 height: 100 color: "red" } } }
- relates to
 - 
                    
QTBUG-16796 Serious QML regression caused by fix for QTBUG-16319
-         
 - Closed
 
 -