Don't load components until the Loader component itself is completed

Previously components were loaded as soon as setSource() or
setSourceComponent() were called, even if the Loader component was not
complete. If a source component had been set, the itemChanged(),
statusChanged() etc. signals would be emitted before the Loader would
be complete and before the internal item had been sized. If a source
had been set via url, these signals were not emitted at all. It also
caused loaded() to be emitted twice for components set by
setSourceComponent().

Task-number: QTBUG-16319
Reviewed-by: Martin Jones